--- a/m.html
+++ b/m.html
@@ -6,14 +6,14 @@
     <font face =" Tahoma" size="6" color= red> Trương Quang Minh A3 toán 2024-2027</font><br>
   <font face =" Tahoma" size="4" color= red> Thông tin cần biết</font><br>
     <font face =" Tahoma" size="3" > Ấn vào ảnh dưới để biết thêm về Ami</font><br>
-  <a href="file:///Users/truongkhanhhien/Downloads/12.html"> <img src="/Users/truongkhanhhien/Downloads/ami.jpeg" height="110">
+  <a href="12.html"> <img src="ami.jpeg" height="110">
 </a>
 </br>
 <table bgcolor="green" width="100%" border="0" cellspacing="0" cellpadding="0">
     <tr>
       <!-- Ảnh bên trái -->
       <td align="left" valign="top">
-        <img src="/Users/truongkhanhhien/Downloads/mđ.png"  height="210">
+        <img src="mđ.png"  height="210">
       </td>
 
       <!-- Ô giữa trống -->
@@ -23,7 +23,7 @@
 
       <!-- Ảnh bên phải -->
       <td align="right" valign="top">
-        <img src="/Users/truongkhanhhien/Downloads/mđ.png" height="210">
+        <img src="mđ.png" height="210">
       </td>
     </tr>
   </table>
@@ -37,18 +37,18 @@
   </tr>
   <tr>
     <td><center>m2</center></td>
-    <td><center><img src="/Users/truongkhanhhien/Downloads/avt mèo.jpeg" height="110"></center></td>
-    <td><center><a href="file:///Users/truongkhanhhien/Downloads/m2.html"><font face =" Tahoma" size="3" color= green> m2</font></a></center></td>
+    <td><center><img src="avt mèo.jpeg" height="110"></center></td>
+    <td><center><a href="m2.html"><font face =" Tahoma" size="3" color= green> m2</font></a></center></td>
   </tr>
   <tr>
     <td><center>m3</center></td>
-    <td><center><img src="/Users/truongkhanhhien/Downloads/meo ngu.jpeg" height="110"></center></td>
-    <td><center><a href="file:///Users/truongkhanhhien/Downloads/m3.html"><font face =" Tahoma" size="3" color= red> m3</font></a></center></td>
+    <td><center><img src="meo ngu.jpeg" height="110"></center></td>
+    <td><center><a href="Downloads/m3.html"><font face =" Tahoma" size="3" color= red> m3</font></a></center></td>
   </tr>
   <tr>
     <td><center>m4</center></td>
-    <td><center><img src="/Users/truongkhanhhien/Downloads/meobeo.jpeg" height="110"></center></td>
-    <td><center><a href="file:///Users/truongkhanhhien/Downloads/m4.html"><font face =" Tahoma" size="3" color= grey> m4</font></a></center></td>
+    <td><center><img src="meobeo.jpeg" height="110"></center></td>
+    <td><center><a href="m4.html"><font face =" Tahoma" size="3" color= grey> m4</font></a></center></td>
   </tr>
   
 
